--- a/SMS.Web/Views/Guard/ConfirmLE.cshtml
+++ b/SMS.Web/Views/Guard/ConfirmLE.cshtml
@@ -140,7 +140,7 @@
                     status: 1
                 },
                 success: (response) => {
-                    window.location.href = "/Guard/Queue"
+                    window.location.reload()
                 },
                 error: () => {
                     alert("Lỗi hệ thống!")
@@ -159,7 +159,7 @@
                     status: 0
                 },
                 success: (response) => {
-                    window.location.href = "/Guard/Queue"
+                    window.location.reload()
                 },
                 error: () => {
                     alert("Lỗi hệ thống!")
