--- a/SMS.Web/Views/Guest/GuestReport.cshtml
+++ b/SMS.Web/Views/Guest/GuestReport.cshtml
@@ -236,9 +236,9 @@
     </div>
     <br />
     <div>
-        <table class="table table-bordered" style="border: 1px solid black !important; width: 80%; margin: auto">
+        <table class="table table-bordered" style="border: 1px solid black !important; width: 70%; margin: auto">
             <tr>
-                <th>Khách, Nhà thầu <br />(Guest, Contractor)</th>
+                <th width="50%">Khách, Nhà thầu <br />(Guest, Contractor)</th>
                 <th height="80">Nhân viên công ty HYUNDAI KEFICO<br />(Created by)</th>
             </tr>
             <tr>
