--- a/SMS.Web/Views/BringOut/ITTApproveDetail.cshtml
+++ b/SMS.Web/Views/BringOut/ITTApproveDetail.cshtml
@@ -11,7 +11,7 @@
 
 <div class="form-horizontal">
     <div class="card-header py-3">
-        <h5 class="m-0 font-weight-bold text-primary">PHÒNG ITT & SMT PHÊ DUYỆT TÀI SẢN MANG RA</h5>
+        <h5 class="m-0 font-weight-bold text-primary">PHÒNG SMT PHÊ DUYỆT TÀI SẢN MANG RA</h5>
     </div>
     <!--Cột bên trái dành cho form đăng ký-->
     <div class="col-md-12 row-form">
@@ -95,7 +95,7 @@
                     <th>Đơn vị</th>
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
-                    <th colspan="4">ITT/SMT phê duyệt</th>
+                    <th colspan="4">SMT phê duyệt</th>
                 </tr>
             </thead>
             <tbody>
