--- a/SMS.Web/Views/Guest/Detail.cshtml
+++ b/SMS.Web/Views/Guest/Detail.cshtml
@@ -111,8 +111,8 @@
                         <input type="number" class="form-control input-previous-button" id="txtNumbersOfPerson" value="@Model.NumbersOfPerson" min="1" readonly disabled />
                     </div>
                 </div>
-                <a id="guest-multi-day" class="btn-info btn btn-sm" title="Đăng ký theo đoàn" style="color: white; cursor: pointer">
-                    <i class="fas fa-edit"></i>&nbsp; Đăng ký Khách theo đoàn
+                <a id="guest-multi-day" class="btn-primary btn btn-sm" title="Đăng ký theo đoàn" style="color: white; cursor: pointer">
+                    <i class="fas fa-download"></i>&nbsp; Tải file đính kèm
                 </a>
                 <div class="multi_day input-group-sm col-5">
                     <div class="form-horizontal col-12 row-add input-group-sm" id="import_file" style="padding: 1px">
@@ -201,7 +201,6 @@
                     <th>Đơn vị</th>
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
-                    <th colspan="4">ITT phê duyệt</th>
                     <th colspan="4">SMT phê duyệt</th>
                     <th colspan="4">FST phê duyệt</th>
                 </tr>
@@ -237,38 +236,6 @@
                             <td title="Không đem trở ra"><i class="fas fa-times" style="color:red"></i></td>
                         }
                         <td>@item.ReturnDate  @item.ReturnTime</td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.SMT))
-                            {
-                                @:@item.SMT
-                            }
-                        </td>
-                        <td>
-                            @if (item.SMT_Date != null)
-                            {
-                                @:@item.SMT_Date
-                            }
-                        </td>
-                        <td>
-                            @if (!string.IsNullOrEmpty(item.SMT_Remark))
-                            {
-                                @:@item.SMT_Remark
-                            }
-                        </td>
-                        <td>
-                            @if (item.SMT_Status != null)
-                            {
-                                if (item.SMT_Status == 1)
-                                {
-                                    <i class="fas fa-check-square"></i>
-                                }
-                                else
-                                {
-                                    <i class="fas fa-times" style="color:red"></i>
-                                }
-                            }
-                        </td>
-
                         <td>
                             @if (!string.IsNullOrEmpty(item.ITT))
                             {
