--- a/SMS.Web/Views/Guest/ITTApproveDetail.cshtml
+++ b/SMS.Web/Views/Guest/ITTApproveDetail.cshtml
@@ -117,8 +117,8 @@
                         <input class="form-control input-previous-button" id="txtNumbersOfPerson" value="@Model.NumbersOfPerson" readonly />
                     </div>
                 </div>
-                <a id="guest-multi-day" class="btn-info btn btn-sm" title="Đăng ký theo đoàn" style="color: white; cursor: pointer">
-                    <i class="fas fa-download"></i>&nbsp; Tải danh sách khách
+                <a id="guest-multi-day" class="btn-primary btn btn-sm" title="Đăng ký theo đoàn" style="color: white; cursor: pointer">
+                    <i class="fas fa-download"></i>&nbsp; Tải file đính kèm
                 </a>
                 <div class="multi_day collapse input-group-sm col-5 show">
                     <div class="form-horizontal col-12 row-add input-group-sm" id="import_file" style="padding: 1px">
@@ -210,7 +210,6 @@
                     <th>Loại hàng hóa</th>
                     <th colspan="2">Thời gian đem trở ra</th>
                     <th colspan="4">SMT phê duyệt</th>
-                    <th colspan="4">FST phê duyệt</th>
                 </tr>
             </thead>
             <tbody>
@@ -309,37 +308,6 @@
 
                         }
                     }
-                    <td>
-                        @if (!string.IsNullOrEmpty(item.FST))
-                        {
-                            @:@item.FST
-                        }
-                    </td>
-                    <td>
-                        @if (item.FST_Date != null)
-                        {
-                            @:@item.FST_Date
-                        }
-                    </td>
-                    <td>
-                        @if (!string.IsNullOrEmpty(item.FST_Remark))
-                        {
-                            @:@item.FST_Remark
-                        }
-                    </td>
-                    <td>
-                        @if (item.FST_Status != null)
-                        {
-                            if (item.FST_Status == 1)
-                            {
-                                <i class="fas fa-check-square" style="color: dodgerblue"></i>
-                            }
-                            else
-                            {
-                                <i class="fas fa-times" style="color: red"></i>
-                            }
-                        }
-                    </td>
                 </tr>
                 }
             </tbody>
